kubernetes/apps/observability/external-metrics-ingest/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-metrics-ingest
  labels:
    app.kubernetes.io/name: external-metrics-ingest
    lb-pool: services-prod
  annotations:
    lbipam.cilium.io/ips: 10.32.140.2
    external-dns.alpha.kubernetes.io/hostname: metrics-ingest.home.kelch.io
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  allocateLoadBalancerNodePorts: false
  selector:
    app.kubernetes.io/name: external-metrics-ingest
  ports:
    - name: https
      port: 443
      targetPort: write
---
apiVersion: v1
kind: Service
metadata:
  name: external-metrics-ingest-internal
  labels:
    app.kubernetes.io/name: external-metrics-ingest
    homelab.kelch.io/metrics: external-metrics-ingest
spec:
  selector:
    app.kubernetes.io/name: external-metrics-ingest
  ports:
    - name: internal
      port: 8426
      targetPort: internal
